--- a/package.json
+++ b/package.json
@@ -68,5 +68,11 @@
   },
   "dependencies": {
     "goober": "^2.0.35"
+  },
+  "resolutions": {
+    "@size-limit/preset-small-lib/**/set-value": ">=4.0.1",
+    "@size-limit/preset-small-lib/**/glob-parent": ">=5.1.2",
+    "tsdx/**/ansi-regex": "^5.0.1",
+    "tsdx/**/node-notifier": ">=8.0.1"
   }
 }
